2000-08-15  Richard Henderson  <rth@cygnus.com>

	* gcc.c-torture/execute/20000815-1.c: New test.

2000-08-15  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.dg/c90-array-lval-2.c, gcc.dg/c90-const-expr-2.c,
	gcc.dg/c99-array-lval-2.c, gcc.dg/c99-const-expr-2.c,
	gcc.dg/c99-func-3.c, gcc.dg/c99-func-4.c: New tests.

2000-08-14  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/refinit2.C: New test.

2000-08-13  Geoff Keating  <geoffk@cygnus.com>

	* lib/c-torture.exp (c-torture): Make
	compiler_conditional_xfail_data global.
	* lib/f-torture.exp (f-torture): Add in torture_eval_before_compile,
	compiler_conditional_xfail_data machinery.
	(f-torture-execute): Likewise.
	* g77.c-torture/compile/20000629-1.x: The test only fails on x86,
	and only when unrolling loops.

	* gcc.dg/c99-array-lval-1.c: The test on line 14 now passes.

2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/explicit81.C: New test.

2000-08-11  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.pt/typename26.C: New test.

2000-08-10  Geoff Keating  <geoffk@cygnus.com>

	* gcc.dg/920413-1.c: Allow for 'traditional C rejects 'U' suffix'
	warning.

2000-08-10  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.other/array3.C: New test.

2000-08-09  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.dg/c90-array-lval-1.c, gcc.dg/c90-scope-1.c,
	gcc.dg/c99-array-lval-1.c, gcc.dg/c99-const-expr-1.c,
	gcc.dg/c99-func-1.c, gcc.dg/c99-func-2.c, gcc.dg/c99-scope-1.c:
	New tests.

2000-08-09  Nathan Sidwell  <nathan@codesourcery.com>

	* g++.old-deja/g++.abi/ptrflags.C: Adjust rtti member names.
	* g++.old-deja/g++.abi/vmihint.C: Likewise.

2000-08-09  Alexandre Oliva  <aoliva@redhat.com>

	* gcc.c-torture/execute/20000808-1.c: New test.

2000-08-09  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.dg/c90-const-expr-1.c: New test.

2000-08-08  Richard Henderson  <rth@cygnus.com>

	* gcc.dg/noncompile/920923-1.c: Declare calloc.
