@@ -1,13 +1,11 @@
 // Build don't link:
 // Origin: Mark Mitchell <mark@codesourcery.com>
 
-// crash test - XFAIL *-*-*
-
 template <class T>
 struct S 
 {
   template <class U>
-  friend S<U>;
+  friend S<U>;            // ERROR - friend must use tag
 };
 
 template struct S<int>;
