@@ -2,7 +2,8 @@
 
 // Overly simplified from testcase by "B. K. Oxley" <binkley@bigfoot.com>
 
-template<class P> struct foo {
+template<class P, class Q> struct foo {
   typedef P parent_type;
-  friend parent_type; // ERROR - template parameters cannot be friends - XFAIL *-*-*
+  friend parent_type; // ERROR - template parameters cannot be friends
+  friend Q;           // ERROR - template parameters cannot be friends
 };
