@@ -1,3 +1,10 @@
+2000-08-17  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.old-deja/g++.pt/crash44.C: Remove XFAIL. Add ERROR.
+	* g++.old-deja/g++.pt/friend38.C: Remove XFAIL. Add extra test.
+	* g++.old-deja/g++.pt/friend45.C: New test.
+	* g++.old-deja/g++.other/friend8.C: New test.
+
 2000-08-15  Richard Henderson  <rth@cygnus.com>
 
 	* gcc.c-torture/execute/20000815-1.c: New test.
